--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<iframe src="https://pico8.herokuapp.com/?5434" style="width:580px;height:540px;border:none"></iframe>
+<iframe src="gunnier_zed.html" style="width:580px;height:540px;border:none"></iframe>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
