--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<iframe src="gunnier_zed.html" style="width:580px;height:540px;border:none"></iframe>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Gunnier Zed (Wip)</h1>
+<iframe src="gunnier_zed.html" style="width:600px;height:000px;border:none"></iframe>
+<p>Made by Preston Adams AKA DwayneDe</p>
+<p>This is a demo for to show the games current progress</p>
 </body>
 </html>
-hello i am th guy :^)
