added created by

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Gunnier Zed (Wip)</h1>
 <iframe src="gunnier_zed.html" style="width:600px;height:600px;border:none"></iframe>
-<p>Made by Preston Adams</p>
+<p>Created by Preston Adams</p>
 <p>This is a demo to show the current progress of the game</p>
 </body>
 </html>
