--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <iframe src="gunnier_zed.html" style="width:600px;height:600px;border:none"></iframe>
 <p>Created by Preston Adams</p>
 <p>This is a demo to show the current progress of the game</p>
+<iframe src="Preston Adams Resume 2019.pdf" style="width:600px;height:600px;border:none"></iframe>
 </body>
 </html>
