--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Gunnier Zed (Wip)</h1>
-<iframe src="gunnier_zed.html" style="width:600px;height:600px;border:none"></iframe>
-<p>Created by Preston Adams</p>
-<p>This is a demo to show the current progress of the game</p>
+<body style="margin: 0px">
+<!--h1>Gunnier Zed (Wip)</h1-->
+<iframe src="gunnier_zed.html" style="width:100%;height:100vh;border:none"></iframe>
+<!--p>Created by Preston Adams</p>
+<p>This is a demo to show the current progress of the game</p-->
 </body>
 </html>
