--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
-<body>
-<h1>Gunnier Zed (Wip)</h1>
-<iframe src="gunnier_zed.html" style="width:600px;height:600px;border:none"></iframe>
-<p>Created by Preston Adams</p>
-<p>This is a demo to show the current progress of the game</p>
-<iframe src="Preston Adams Resume 2019.pdf" style="width:600px;height:600px;border:none"></iframe>
-=======
 <body style="margin: 0px">
 <!--h1>Gunnier Zed (Wip)</h1-->
-<iframe src="gunnier_zed.html" style="width:100%;height:100vh;border:none"></iframe>
+<iframe src="gunnier_zed.html" style="width:100%;height:100%;border:none"></iframe>
 <!--p>Created by Preston Adams</p>
 <p>This is a demo to show the current progress of the game</p-->
->>>>>>> 1ce8ced9ba1ed2aa831f66dd67c51552624ef5ae
 </body>
 </html>
