--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="margin: 0px">
 <!--h1>Gunnier Zed (Wip)</h1-->
-<iframe src="gunnier_zed.html" style="width:100%;height:100%;border:none"></iframe>
+<iframe src="gunnier_zed.html" style="width:100%;height:100%;border:none;scrolling=no"></iframe>
 <!--p>Created by Preston Adams</p>
 <p>This is a demo to show the current progress of the game</p-->
 </body>
