--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="assets/css/main.css" />
 <body style="margin: 0px">
+
 <!--h1>Gunnier Zed (Wip)</h1-->
 <iframe src="gunnier_zed.html" style="width:100%;height:99.4vh;border:none"></iframe>
 <!--p>Created by Preston Adams</p>
