--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="assets/css/main.css" />
-<body>
+<body style="margin: 0px;
+background: #222222;">
 
 <!--h1>Gunnier Zed (Wip)</h1-->
 <iframe src="gunnier_zed.html" style="width:100%;height:99.4vh;border:none"></iframe>
