--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="assets/css/main.css" />
-<body style="margin: 0px;
-background: #222222;">
-
+<body style="margin: 0px;background-color: #222222;">
 <!--h1>Gunnier Zed (Wip)</h1-->
-<iframe src="gunnier_zed.html" style="width:100%;height:99.4vh;border:none"></iframe>
+<iframe src="gunnier_zed.html" style="width:100%;height:100vh;border:none"></iframe>
 <!--p>Created by Preston Adams</p>
 <p>This is a demo to show the current progress of the game</p-->
 </body>
